--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,10 @@
 Package: rperform.easytest
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Title: A Test Package for GSoC Rperform
+Version: 0.0.1
 Authors@R: 
     person("Sahil", "H", , "sahilhandauni@gmail.com", role = c("aut", "cre"))
 Description:A test package to demonstrate GitHub Actions integration for Rperform.
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+License: MIT
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
