--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: rperform.easytest
 Title: A Test Package for GSoC Rperform
 Version: 0.0.1
 Authors@R: 
-    person("Sahil", "H", , "sahilhandauni@gmail.com", role = c("aut", "cre"))
-Description:A test package to demonstrate GitHub Actions integration for Rperform.
+    person("Sahil", "H", NULL, "sahilhandauni@gmail.com", role = c("aut", "cre"))
+Description: A test package to demonstrate GitHub Actions integration for Rperform.
 License: MIT
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
